[gd_scene load_steps=18 format=3 uid="uid://dvq55u1qw0oqr"]

[ext_resource type="Script" path="res://scripts/dungeon/bosses/routher.gd" id="1_d6mbr"]
[ext_resource type="Texture2D" uid="uid://pcggjon11th1" path="res://img/router.png" id="2_2aqtl"]

[sub_resource type="Animation" id="Animation_w8yi0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ldg3n"]
resource_name = "damage"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(0.392292, 2.46229, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.901961, 0.482353, 0.494118, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xvw5n"]
_data = {
"RESET": SubResource("Animation_w8yi0"),
"damage": SubResource("Animation_ldg3n")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_jxmwu"]
atlas = ExtResource("2_2aqtl")
region = Rect2(0, 0, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8uqt"]
atlas = ExtResource("2_2aqtl")
region = Rect2(28, 0, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cel5"]
atlas = ExtResource("2_2aqtl")
region = Rect2(56, 0, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fv7c"]
atlas = ExtResource("2_2aqtl")
region = Rect2(84, 0, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsy10"]
atlas = ExtResource("2_2aqtl")
region = Rect2(112, 0, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_uadc8"]
atlas = ExtResource("2_2aqtl")
region = Rect2(140, 0, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_yox04"]
atlas = ExtResource("2_2aqtl")
region = Rect2(140, 0, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uvsg"]
atlas = ExtResource("2_2aqtl")
region = Rect2(112, 0, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dtcr"]
atlas = ExtResource("2_2aqtl")
region = Rect2(0, 0, 28, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_mcqe1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxmwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8uqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cel5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fv7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsy10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uadc8")
}],
"loop": false,
"name": &"attack",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yox04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uvsg")
}],
"loop": true,
"name": &"get_up",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dtcr")
}],
"loop": false,
"name": &"normal",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uv1re"]
size = Vector2(256, 240)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qwj5o"]
size = Vector2(304, 106)

[node name="StaticBody2D" type="StaticBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_d6mbr")

[node name="get_up" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xvw5n")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(424, -40)
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_mcqe1")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(424, -40)
shape = SubResource("RectangleShape2D_uv1re")

[node name="fires" type="Node2D" parent="."]
position = Vector2(512, -152)

[node name="hit_zone" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_zone"]
position = Vector2(424, 43)
shape = SubResource("RectangleShape2D_qwj5o")

[connection signal="timeout" from="get_up" to="." method="_on_get_up_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
